# django-imap-backend

./: CHANGELOG.md  README.md  publish.sh  pyproject.toml  setup.py
django_imap_backend/: __init__.py  backend.py  client.py
