[tool.poetry]
name = "django-imap-backend"
version = "0.2.3"
description = "IMAP backend for Django mail package"
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.0"

[tool.poetry.dev-dependencies]
setuptools = "^49.1.0"
wheel = "^0.34.2"
twine = "^3.2.0"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-flake8 = "^1.0.6"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
