[tool.poetry]
name = "django-imap-backend"
version = "0.2.3"
description = "IMAP backend for Django mail package"
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = ">=2,<4"

[tool.poetry.dev-dependencies]
setuptools = "^49.1.0"
wheel = "^0.34.2"
twine = "^3.2.0"
flake8 = "^3.9.2"
coverage = "^5.5"

[tool.coverage.run]
omit = [
    '*/tests/*', 'docs/', 'venv/*', 'build/', 'dist/', '.github/', 'django_imap_backend.egg-info/', 'setup.py',
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
